# clorinde

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  deploy.yml  docs.yml  main.yaml
benches/: Cargo.toml  README.md  codegen.rs
benches/execution/: clorinde_benches.rs  main.rs  postgres_benches.rs
benches/queries/: bench.sql
clorinde/: Cargo.toml
clorinde/src/: cli.rs  codegen.rs  config.rs  container.rs  lib.rs  parser.rs  prepare_queries.rs  read_queries.rs  type_registrar.rs  utils.rs  validation.rs
clorinde/src/codegen/: cargo.rs  client.rs  queries.rs  types.rs  vfs.rs
crates/clorinde/: Cargo.toml
crates/clorinde/src/: cli.rs  codegen.rs  config.rs  conn.rs  container.rs  error.rs  lib.rs  load_schema.rs  main.rs  prepare_queries.rs  type_registrar.rs
crates/clorinde/src/codegen/: cargo.rs  client.rs  queries.rs  types.rs
crates/codegen_template/: Cargo.toml
crates/codegen_template/src/: lib.rs
crates/cornucopia/: Cargo.toml
crates/cornucopia/src/: type_registrar.rs
crates/cornucopia/src/codegen/: cargo.rs  client.rs  vfs.rs
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  contributing.md  examples.md
docs/src/benchmarks/2025-02-15/bench_insert/1/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/100/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/1000/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/clorinde/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/clorinde_async/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/diesel/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/postgres/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/sqlx/report/: index.html
docs/src/benchmarks/2025-02-15/bench_insert/tokio_postgres/report/: index.html
docs/src/benchmarks/2025-02-15/bench_loading_associations_sequentially/clorinde/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/src/benchmarks/2025-02-15/bench_loading_associations_sequentially/clorinde/change/: estimates.json
docs/src/benchmarks/2025-02-15/bench_loading_associations_sequentially/report/: index.html
docs/src/benchmarks/2025-02-15/bench_medium_complex_query/report/: index.html
docs/src/benchmarks/2025-02-15/bench_trivial_query/report/: index.html
docs/src/benchmarks/2025-02-15/codegen_async/base/: estimates.json  sample.json  tukey.json
docs/src/benchmarks/2025-02-15/codegen_async/change/: estimates.json
docs/src/benchmarks/2025-02-15/codegen_async/new/: benchmark.json  sample.json  tukey.json
docs/src/benchmarks/2025-02-15/codegen_async/report/: index.html
docs/src/benchmarks/2025-02-15/codegen_sync/base/: estimates.json  sample.json  tukey.json
docs/src/benchmarks/2025-02-15/codegen_sync/change/: estimates.json
docs/src/benchmarks/2025-02-15/codegen_sync/new/: benchmark.json  estimates.json  sample.json  tukey.json
docs/src/benchmarks/2025-02-15/codegen_sync/report/: index.html
docs/src/benchmarks/2025-02-15/report/: index.html
docs/src/introduction/: installation.md  introduction.md  migration_from_cornucopia.md  types.md
docs/src/using_clorinde/: api.md  cli.md  error_reporting.md  using_clorinde.md
docs/src/using_queries/: db_connections.md  ergonomic_parameters.md  using_queries.md
docs/src/writing_queries/: query_annotations.md  type_annotations.md  writing_queries.md
examples/auto_build/: Cargo.toml  README.md  build.rs
examples/auto_build/auto_build_codegen/: Cargo.toml
examples/auto_build/auto_build_codegen/src/: client.rs  lib.rs  queries.rs  type_traits.rs
examples/auto_build/auto_build_codegen/src/queries/: module_1.rs
examples/auto_build/src/: main.rs
examples/basic_async/: Cargo.toml  README.md
examples/basic_async/basic_async_codegen/: Cargo.toml
examples/basic_async/basic_async_codegen/src/: types.rs
examples/basic_async/basic_async_codegen/src/client/async_/: deadpool.rs  generic_client.rs
examples/basic_async/basic_async_codegen/src/queries/: module_1.rs  module_2.rs
examples/basic_async/queries/: module_2.sql
examples/basic_async/src/: main.rs
examples/basic_async_wasm/: Cargo.toml  README.md
examples/basic_async_wasm/basic_async_wasm_codegen/: Cargo.toml
examples/basic_async_wasm/basic_async_wasm_codegen/src/client/async_/: generic_client.rs
examples/basic_async_wasm/basic_async_wasm_codegen/src/queries/: module_2.rs
examples/basic_async_wasm/src/: lib.rs
examples/basic_sync/: Cargo.toml  README.md
examples/basic_sync/basic_sync_codegen/: Cargo.toml
examples/basic_sync/basic_sync_codegen/src/: client.rs  lib.rs
examples/basic_sync/basic_sync_codegen/src/client/: sync.rs
examples/basic_sync/basic_sync_codegen/src/queries/: module_1.rs  module_2.rs
examples/basic_sync/src/: main.rs
examples/custom_types/: Cargo.toml  README.md  clorinde.toml  schema.sql
examples/custom_types/ctypes/: Cargo.toml
examples/custom_types/ctypes/src/: date.rs
examples/custom_types/custom_types_codegen/: Cargo.toml
examples/custom_types/custom_types_codegen/src/: queries.rs  types.rs
examples/custom_types/custom_types_codegen/src/queries/: module_1.rs  module_2.rs
examples/custom_types/queries/: module_2.sql
examples/custom_types/src/: main.rs
test_codegen/codegen/: Cargo.toml
test_codegen/codegen/src/: lib.rs
tests/codegen/: Cargo.toml  schema.sql
tests/codegen/codegen/: Cargo.toml
tests/codegen/codegen/src/: client.rs  domain.rs  lib.rs  queries.rs  type_traits.rs  types.rs
tests/codegen/codegen/src/queries/: copy.rs  domain.rs  named.rs  nullity.rs  params.rs  stress.rs  syntax.rs
tests/codegen/queries/: nullity.sql  syntax.sql
tests/codegen/src/: main.rs
tests/integration/: Cargo.toml  README.md
tests/integration/fixtures/codegen/: examples.toml  test_codegen.toml
tests/integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs  utils.rs
(+451 files in other folders)
