[package]
name = "benches"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
clorinde = { path = "../clorinde" }

# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# async
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

# rust-postgres interaction
postgres = "0.19.9"
tokio-postgres = "0.7.12"
postgres-types = "0.2.8"

# diesel
diesel = { version = "2.2.6", features = ["postgres"] }

# sqlx
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }

# Temporary files
tempfile = "3.15.0"

generated = { path = "generated" }

[[bench]]
name = "execution"
harness = false
path = "execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
