[package]
name = "clorinde"
version = "0.12.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type-checked Rust from your PostgreSQL queries."
homepage = "https://github.com/halcyonnouveau/clorinde"
repository = "https://github.com/halcyonnouveau/clorinde"
readme = "../README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]
publish = true

[dependencies]
# Codegen tools
quote = "1.0.38"
prettyplease = "0.2.29"
syn = { version = "2.0.96", features = ["full"] }
proc-macro2 = "1.0.93"

# Postgres interaction
postgres = "0.19.9"
postgres-types = "0.2.8"

# Error handling and reporting
thiserror = "2.0.9"
miette = { version = "7.4.0", features = ["fancy"] }

# Parser
chumsky = "0.9.3"

# CLI handling
clap = { version = "4.5.24", features = ["derive", "env"] }

# Word case
heck = "0.5.0"

# Order-preserving map to work around borrowing issues
indexmap = "2.7.0"

# Generate temporary files
tempfile = "3.15.0"

# Config handling
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
