[package]
name = "clorinde"
version = "0.14.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type-checked Rust from your PostgreSQL queries."
homepage = "https://github.com/halcyonnouveau/clorinde"
repository = "https://github.com/halcyonnouveau/clorinde"
readme = "../README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]
publish = true

[dependencies]
# Codegen tools
quote = "1.0.40"
prettyplease = "0.2.31"
syn = { version = "2.0.100", features = ["full"] }
proc-macro2 = "1.0.94"

# Postgres interaction
postgres = "0.19.9"
postgres-types = "0.2.8"

# Error handling and reporting
thiserror = "2.0.12"
miette = { version = "7.5.0", features = ["fancy"] }

# Parser
chumsky = "0.10.0"

# CLI handling
clap = { version = "4.5.32", features = ["derive", "env"] }

# Word case
heck = "0.5.0"

# Order-preserving map to work around borrowing issues
indexmap = "2.7.0"

# Generate temporary files
tempfile = "3.19.1"

# Config handling
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
