[package]
name = "auto-build"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Clorinde (codegen)
codegen = { path = "auto_build_codegen", package = "auto_build_codegen" }

# Async
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

[build-dependencies]
# Clorinde (cli/api)
clorinde = { path = "../../clorinde", package = "clorinde" }
