[package]
edition = "2021"
name = "basic-async-wasm"
version = "0.1.0"
publish = false

[dependencies]
# Clorinde with wasm feature
clorinde = { path = "basic_async_wasm_codegen", package = "basic_async_wasm_codegen", default-features = false, features = [
    "wasm-async",
] }

tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
futures = "0.3.31"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
worker = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib", "rlib"]
