[package]
name = "test_codegen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Clorinde
codegen = { path = "codegen" }
# async
futures = "0.3.31"
# rust-postgres interaction
postgres = "0.19.9"
tokio-postgres = "0.7.12"
# serde
serde = { version = "1.0.217", features = ["derive"] }
# extra types
serde_json = { version = "1.0.135", features = ["raw_value"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
eui48 = { version = "1.1.0", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
