[package]
name = "test_integration"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
clorinde = { path = "../../crates/clorinde" }

# Create temporary projects for error tests.
tempfile = "3.15.0"

# Compare directories
dir-diff = "0.3.3"

# Colored output
owo-colors = "4.1.0"

# CLI handling
clap = { version = "4.5.24", features = ["derive"] }

# Postgres interaction
postgres = "0.19.9"

# serde
## Test fixtures ser/de
serde = { version = "1.0.217", features = ["derive"] }
## Read/write fixture files
toml = "0.8.19"
